Dummy_Package_for_scratch_org/main/default/objects/Copado_Notification__c/fields/isFinished__c.field-meta.xml
<CustomField>
    <fullName>isFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>