Dummy_Package_for_scratch_org/main/default/objects/Copado_Notification__c/fields/isSuccess__c.field-meta.xml
<CustomField>
    <fullName>isSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>