Dummy_Package_for_scratch_org/main/default/objects/Copado_Notification__c/fields/Matching_Key__c.field-meta.xml
<CustomField>
    <fullName>Matching_Key__c</fullName>
    <label>Matching Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>