Dummy_Package_for_scratch_org/main/default/objects/Copado_Notification__c/fields/Parent2Id__c.field-meta.xml
<CustomField>
    <fullName>Parent2Id__c</fullName>
    <label>Parent2Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>