Dummy_Package_for_scratch_org/main/default/objects/Copado_Notification__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>